# litex_m2sdr

./: .gitignore  CLAUDE.md  litex_m2sdr.py  litex_m2sdr_platform.py
doc/: 5g_nr_design_plan.md  5g_nr_gap_analysis.md  srsue_scs30_band78_findings.md  testing.md  vfio_pmd_plan.md
litescope/: litescope_cli.py
litex_m2sdr/: wr_helper.py
litex_m2sdr/gateware/: capability.py  cfr.py  dc_filter.py  header.py  iq_correction.py  sample_counter.py  tdd_switch.py  timed_tx.py
litex_m2sdr/gateware/ad9361/: core.py  phy.py  scheduler.py  spi.py
litex_m2sdr/software/: flash.py
litex_m2sdr/software/kernel/: config.h  csr.h  main.c  mem.h  soc.h
litex_m2sdr/software/soapysdr/: CMakeLists.txt  LiteXM2SDRDevice.cpp  LiteXM2SDRDevice.hpp  LiteXM2SDRRegistration.cpp  LiteXM2SDRStreamWorker.hpp  LiteXM2SDRStreaming.cpp  README.md  test_play.py  test_timestamp_tx.py
litex_m2sdr/software/user/: Makefile  README.md  bladerf_gnb_monitor.py  m2sdr_gen  m2sdr_gen.c  m2sdr_gpio  m2sdr_gpio.c  m2sdr_loopback_latency.py  m2sdr_play  m2sdr_play.c  m2sdr_record  m2sdr_record.c  m2sdr_rf  m2sdr_rf.c  m2sdr_sata.c  m2sdr_soapy_loopback_test.py  m2sdr_streaming_test  m2sdr_streaming_test.cpp  m2sdr_timed_tx_test.py  m2sdr_util  m2sdr_util.c
litex_m2sdr/software/user/ad9361/: ad9361.c  util.h
litex_m2sdr/software/user/liblitepcie/: litepcie_dma.c
litex_m2sdr/software/user/libm2sdr/: libm2sdr.h  m2sdr.h  m2sdr_ad9361_spi.c  m2sdr_ad9361_spi.h  m2sdr_config_stream.c  m2sdr_device.c  m2sdr_flash.h  m2sdr_hal_vfio.c  m2sdr_internal.h  m2sdr_rf.c
litex_m2sdr/software/user/libm2sdr_vfio/: Makefile  m2sdr_vfio.h  m2sdr_vfio_test.c  vfio_csr.c  vfio_dma.c  vfio_poll.c  vfio_priv.h  vfio_setup.c
litex_m2sdr/software/validation/ocudu/: .gitignore  HANDOFF.md  README.md
litex_m2sdr/software/validation/ocudu/configs/: cell_equivalence_checklist.md  gnb_m2sdr_band3_ota.template.yml  gnb_zmq_tdd_n78_20mhz.yml  sims-ocudu-zmq.example.toml  ue-bladerf-band3-ota.template.conf  ue-zmq-netns.template.conf
litex_m2sdr/software/validation/ocudu/docs/: m2sdr_bad_page_mmap_teardown_bug.md  ocudu_m2sdr_35g_bladerf_pss_baseline.md  ocudu_m2sdr_35g_ssb_baseline.md
litex_m2sdr/software/validation/ocudu/ocudu_overlay/apps/examples/phy/: CMakeLists.txt  radio_ssb.cpp
litex_m2sdr/software/validation/ocudu/ocudu_overlay/patches/: ocudu_radio_ssb_m2sdr_profiles.patch
litex_m2sdr/software/validation/ocudu/scripts/: analyze_capture_sync_from_detector.sh  analyze_cluster_rf_run.sh  capture_bladerf_raw_35g.sh  capture_bladerf_sc16.sh  capture_bladerf_sc16_minimal.sh  check_m2sdr_clock_gate.sh  cleanup_zmq_ocudu.sh  collect_host_state.sh  detect_nr_pss_sss_from_sc16.py  env_m2sdr_copy_dma.sh  env_m2sdr_ocudu_safe_rf.sh  env_ocudu_validation.sh  fetch_cluster_rf_run.sh  inspect_m2sdr_bad_page_mmap.sh  post_powercycle_m2sdr_preflight.sh  run_gnb_b3_backoff20_marked_tx_detached.sh  run_ota_stage_template.sh  run_ota_stage_template_rt_local.sh  run_radio_ssb_35g_b3_bladerf_baseline.sh  run_radio_ssb_35g_b6_capture_safe.sh  run_radio_ssb_35g_backoff_timing_sweep.sh  run_soapy_discovery_gated.sh  run_soapy_rx_smoke_cpp_logged.sh  run_soapy_rx_smoke_logged.sh  run_zmq_ocudu_dataplane.sh  self_check_validation_harness.sh  summarize_zmq_run.sh  validate_bladerf_ssb_pbch_mib_from_capture.sh  validate_bladerf_ssb_pbch_mib_quiet_from_capture.sh
litex_m2sdr/software/validation/ocudu/templates/: HARDWARE_RESULT_TEMPLATE.md  RESULT_TEMPLATE.md
litex_m2sdr/software/validation/ocudu/tools/: fast_nr_pss_check.py
scripts/: analyze_rx.py  capture_detect_ssb.py  monitor_dma.py  vfio_setup.sh
sim/: ExperimentManager.py  README.md  testbench.py
sim/config_yaml/: minimal_config.yaml
sim/header_sim/: top.py
sim/header_sim/vcd_outputs/header_test/: config_report.txt
sim/header_sim/vcd_outputs/header_test_no_meta/: config_report.txt
sim/header_sim/vcd_outputs/header_test_no_sched/: config_report.txt
sim/header_sim/vcd_outputs/header_test_sched/: config_report.txt
sim/scheduler_sim/: top.py
sim/scheduler_sim/vcd_outputs/alltest/: config_report.txt
sim/scheduler_sim/vcd_outputs/modular_simu/: config_report.txt
test/: test_agc.py  test_capability.py  test_cfr.py  test_clks.py  test_dashboard.py  test_dc_filter.py  test_header.py  test_iq_correction.py  test_sample_counter.py  test_scheduler.py  test_tdd_switch.py  test_time.py  test_timed_tx.py
